<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/fragment_home_container"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/noMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:fontFamily="@font/sourcecode_pro"
        android:text="@string/no_messages"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/chatList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="@font/pixelify_sans"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textFontWeight="600"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:clipToPadding="false"
        android:paddingBottom="35dp"
        tools:itemCount="5"
        tools:listitem="@layout/incoming_bubble" />

    <EditText
        android:id="@id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/message_input_bg"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="@string/msgInputHint"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="20sp"
        android:textColorHint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/waitingForLLM"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:indeterminate="true"
        android:indeterminateTint="#FFD600"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/drawerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@null"
        android:padding="16dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:background="@null"
        android:src="@drawable/baseline_refresh_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/restart" />

    <ImageButton
        android:id="@+id/settingsBtn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/chatList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_24" />

    <ImageButton
        android:id="@+id/stopBtn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.6"
        android:background="@drawable/roundedbutton"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:src="@drawable/baseline_stop_24"
        android:text="@string/stop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/chatList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/regenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:alpha="0.7"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        android:text="@string/regenerate"
        android:textColor="#D8D8D8"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/chatList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>